--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        <!--Header-->
+        <!-- Header -->
         <header>
             <div>
                 <div>
@@ -17,25 +17,25 @@
                 </div>
                 <nav>
                     <a href="/">Home</a>
-                    <a href="services">Services</a>
-                    <a href="works">Works</a>
-                    <a href="about">About</a>
-                    <a href="latest_news">Latest news</a>
-                    <a href="testimonials">Testimonials</a>
-                    <a href="contact">Contact</a>
+                    <a href="#services">Services</a>
+                    <a href="#works">Works</a>
+                    <a href="#about">About</a>
+                    <a href="#latest_news">Latest news</a>
+                    <a href="#testimonials">Testimonials</a>
+                    <a href="#contact">Contact</a>
                 </nav>
             </div>
         </header>
-        <!--Main-->
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
-            <!--Hero section-->
+            <!-- Hero section -->
             <section>
                 <div>
                     <h2>We help you build your brand!</h2>
                 </div>
             </section>
-            <!--Services section-->
+            <!-- Services section -->
             <section>
                 <div>
                     <header>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </section>
-            <!--Works section-->
+            <!-- Works section -->
             <section>
                 <div>
                     <header>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </section>
-            <!--About Us section-->
+            <!-- About Us section -->
             <section>
                 <div>
                     <header>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </section>
-            <!--Latest news section-->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </section>
-            <!--Testimonials section-->
+            <!-- Testimonials section -->
             <section>
                 <div>
                     <header>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
             </section>
-            <!--Contact section-->
+            <!-- Contact section -->
             <section>
                 <div>
                     <header>
@@ -155,7 +155,7 @@
                 </div>
             </section>
         </main>
-        <!--Footer-->
+        <!-- Footer -->
         <footer>
             <div>
                 Footer
