--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        <!--Header-->
+        <!-- Header -->
         <header>
             <div>
                 <div>
@@ -28,17 +28,17 @@
                 </nav>
             </div>
         </header>
-        <!--Main-->
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
-            <!--Hero section-->
+            <!-- Hero section -->
             <section>
                 <div>
                     <h2>We help you build your brand!</h2>
                     <a href="#">Get started</a>
                 </div>
             </section>
-            <!--Services section-->
+            <!-- Services section -->
             <section>
                 <div>
                     <header>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </section>
-            <!--Works section-->
+            <!-- Works section -->
             <section>
                 <div>
                     <header>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </section>
-            <!--About Us section-->
+            <!-- About Us section -->
             <section>
                 <div>
                     <header>
@@ -99,7 +99,7 @@
                     <a href="about.html">Learn more about us</a>
                 </div>
             </section>
-            <!--Latest news section-->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
             </section>
-            <!--Testimonials section-->
+            <!-- Testimonials section -->
             <section>
                 <div>
                     <header>
@@ -154,7 +154,7 @@
                         </article>
                         <article>
                             <blockquote>
-                                <p> love your system. Definitely worth the investment. I'd be lost without Techium company.
+                                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.
                                     <cite>Sven H.</cite>
                                 </p>
                             </blockquote>
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </section>
-            <!--Contact section-->
+            <!-- Contact section -->
             <section>
                 <div>
                     <header>
@@ -178,7 +178,7 @@
                 </div>
             </section>
         </main>
-        <!--Footer-->
+        <!-- Footer -->
         <footer>
             <div>
                 <ul>
